gcode api started

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,8 @@ set(API_Files
 	"Source/API/VoxelAPI.h"
 	"Source/API/LineAPI.cpp"
 	"Source/API/LineAPI.h"
+	"Source/API/GCodeAPI.cpp"
+	"Source/API/GCodeAPI.h"
 	"Source/API/apiDatabase.cpp"
 	"Source/API/apiDatabase.h"
 )
