fixed crash for weird tiny hole only artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 out/
 /Examples/NonPlanarWobbleSlicer/3DBenchy.stl
 Examples/NonPlanarWobbleSlicer/starter_3DBenchy.gcode
+/Examples/NonPlanarWobbleSlicer/slice
