searched for issue with slice holes; failed to fix; wrote failing test to investigate

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Examples/NonPlanarWobbleSlicer/starter_3DBenchy.gcode
 Examples/NonPlanarWobbleSlicer/3DBenchy.gcode
 Examples/NonPlanarWobbleSlicer/Main.stl
 Examples/NonPlanarWobbleSlicer/w3DBenchy.gcode
+/Examples/NonPlanarWobbleSlicer/dbg
