--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(Catch2 REQUIRED)
 
 set(Test_Files
 	"BasicLineSlice.cpp"
+	"TorusSlice.cpp"
 )
 source_group("Main" FILES ${Main_Files})
 set(Main_Files
@@ -20,6 +21,7 @@ set(ALL_FILES
 
 
 add_executable(FarfalleTests ${ALL_FILES})
+set_property(TARGET FarfalleTests PROPERTY CXX_STANDARD 20)
 
 target_link_libraries(FarfalleTests PRIVATE 
 Catch2::Catch2
@@ -28,6 +30,11 @@ FarfalleLib
 target_include_directories(FarfalleTests SYSTEM PUBLIC 
 "${CMAKE_CURRENT_LIST_DIR}/../Source/"
 )
+
+add_custom_command(TARGET FarfalleTests POST_BUILD 
+               COMMAND ${CMAKE_COMMAND} -E copy_directory 
+               "${FarfalleTests_SOURCE_DIR}/TestData"              
+                $<TARGET_FILE_DIR:FarfalleTests>/TestData)
 
 #include(CTest)
 #include(Catch)
