Add Python Packages via CMAKE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,6 +136,11 @@ target_include_directories(FarfalleLib PUBLIC
 
 get_filename_component(pyDir "${Python3_EXECUTABLE}" DIRECTORY )
 
+# .\python -m ensurepip
+execute_process(COMMAND ${Python3_EXECUTABLE} -m ensurepip)
+#.\scripts\pip install scipy
+execute_process(COMMAND "${pyDir}/scripts/pip3" install scipy)
+
 add_custom_command(TARGET Farfalle POST_BUILD 
                COMMAND ${CMAKE_COMMAND} -E copy_directory 
                ${pyDir}              
