one dimensional python array

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Examples/NonPlanarWobbleSlicer/w3DBenchy.gcode
 /Examples/NonPlanarWobbleSlicer/dbg
 Examples/NonPlanarWobbleSlicer/slice2model.stl
 Examples/NonPlanarWobbleSlicer/slice2tool.stl
+/Examples/VoxelSlicer/3DBenchy.stl
