descriptions and new chunks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,32 +44,36 @@ set(MagickaVox_Files
     "Source/Tools/MagicaVox/Chunk.h"
     "Source/Tools/MagicaVox/ChunkFactory.h"
     "Source/Tools/MagicaVox/ChunkLAYR.h"
+    "Source/Tools/MagicaVox/ChunkLAYR.cpp"
     "Source/Tools/MagicaVox/ChunkMAIN.h"
+    "Source/Tools/MagicaVox/ChunkMAIN.cpp"
     "Source/Tools/MagicaVox/ChunkMATL.h"
+    "Source/Tools/MagicaVox/ChunkMATL.cpp"
     "Source/Tools/MagicaVox/ChunknGRP.h"
+    "Source/Tools/MagicaVox/ChunknGRP.cpp"
     "Source/Tools/MagicaVox/ChunknSHP.h"
+    "Source/Tools/MagicaVox/ChunknSHP.cpp"
     "Source/Tools/MagicaVox/ChunknTRN.h"
+    "Source/Tools/MagicaVox/ChunknTRN.cpp"
     "Source/Tools/MagicaVox/ChunkPACK.h"
+    "Source/Tools/MagicaVox/ChunkPACK.cpp"
     "Source/Tools/MagicaVox/ChunkRGBA.h"
+    "Source/Tools/MagicaVox/ChunkRGBA.cpp"
     "Source/Tools/MagicaVox/ChunkrOBJ.h"
+    "Source/Tools/MagicaVox/ChunkrOBJ.cpp"
     "Source/Tools/MagicaVox/ChunkSIZE.h"
+    "Source/Tools/MagicaVox/ChunkSIZE.cpp"
     "Source/Tools/MagicaVox/ChunkXYZI.h"
+    "Source/Tools/MagicaVox/ChunkXYZI.cpp"
+    "Source/Tools/MagicaVox/ChunkRCAM.h"
+    "Source/Tools/MagicaVox/ChunkRCAM.cpp"
+    "Source/Tools/MagicaVox/ChunkNOTE.h"
+    "Source/Tools/MagicaVox/ChunkNOTE.cpp"
     "Source/Tools/MagicaVox/Reader.h"
     "Source/Tools/MagicaVox/typeDICT.h"
     "Source/Tools/MagicaVox/typeROTATION.h"
 	"Source/Tools/MagicaVox/Chunk.cpp"
     "Source/Tools/MagicaVox/ChunkFactory.cpp"
-    "Source/Tools/MagicaVox/ChunkLAYR.cpp"
-    "Source/Tools/MagicaVox/ChunkMAIN.cpp"
-    "Source/Tools/MagicaVox/ChunkMATL.cpp"
-    "Source/Tools/MagicaVox/ChunknGRP.cpp"
-    "Source/Tools/MagicaVox/ChunknSHP.cpp"
-    "Source/Tools/MagicaVox/ChunknTRN.cpp"
-    "Source/Tools/MagicaVox/ChunkPACK.cpp"
-    "Source/Tools/MagicaVox/ChunkRGBA.cpp"
-    "Source/Tools/MagicaVox/ChunkrOBJ.cpp"
-    "Source/Tools/MagicaVox/ChunkSIZE.cpp"
-    "Source/Tools/MagicaVox/ChunkXYZI.cpp"
     "Source/Tools/MagicaVox/Reader.cpp"
     "Source/Tools/MagicaVox/typeDICT.cpp"
     "Source/Tools/MagicaVox/typeROTATION.cpp"
