--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,49 +34,58 @@ set(Tools_Files
 	"Source/Tools/STL.cpp"
 	"Source/Tools/STL.h"
 )
-source_group("Source/Tools" FILES ${Tools_Files})
+source_group("Source/Tools/" FILES ${Tools_Files})
 
+set(MagickaVox_Chunk_Files
+    "Source/Tools/MagicaVox/Chunk/Chunk.h"
+    "Source/Tools/MagicaVox/Chunk/ChunkFactory.h"
+    "Source/Tools/MagicaVox/Chunk/ChunkLAYR.h"
+    "Source/Tools/MagicaVox/Chunk/ChunkLAYR.cpp"
+    "Source/Tools/MagicaVox/Chunk/ChunkMAIN.h"
+    "Source/Tools/MagicaVox/Chunk/ChunkMAIN.cpp"
+    "Source/Tools/MagicaVox/Chunk/ChunkMATL.h"
+    "Source/Tools/MagicaVox/Chunk/ChunkMATL.cpp"
+    "Source/Tools/MagicaVox/Chunk/ChunknGRP.h"
+    "Source/Tools/MagicaVox/Chunk/ChunknGRP.cpp"
+    "Source/Tools/MagicaVox/Chunk/ChunknSHP.h"
+    "Source/Tools/MagicaVox/Chunk/ChunknSHP.cpp"
+    "Source/Tools/MagicaVox/Chunk/ChunknTRN.h"
+    "Source/Tools/MagicaVox/Chunk/ChunknTRN.cpp"
+    "Source/Tools/MagicaVox/Chunk/ChunkPACK.h"
+    "Source/Tools/MagicaVox/Chunk/ChunkPACK.cpp"
+    "Source/Tools/MagicaVox/Chunk/ChunkRGBA.h"
+    "Source/Tools/MagicaVox/Chunk/ChunkRGBA.cpp"
+    "Source/Tools/MagicaVox/Chunk/ChunkrOBJ.h"
+    "Source/Tools/MagicaVox/Chunk/ChunkrOBJ.cpp"
+    "Source/Tools/MagicaVox/Chunk/ChunkSIZE.h"
+    "Source/Tools/MagicaVox/Chunk/ChunkSIZE.cpp"
+    "Source/Tools/MagicaVox/Chunk/ChunkXYZI.h"
+    "Source/Tools/MagicaVox/Chunk/ChunkXYZI.cpp"
+    "Source/Tools/MagicaVox/Chunk/ChunkRCAM.h"
+    "Source/Tools/MagicaVox/Chunk/ChunkRCAM.cpp"
+    "Source/Tools/MagicaVox/Chunk/ChunkNOTE.h"
+    "Source/Tools/MagicaVox/Chunk/ChunkNOTE.cpp"
+	"Source/Tools/MagicaVox/Chunk/Chunk.cpp"
+    "Source/Tools/MagicaVox/Chunk/ChunkFactory.cpp"
+)
+source_group("Source/Tools/MagicaVox/Chunk/" FILES ${MagickaVox_Chunk_Files})
+
+set(MagickaVox_IO
+    "Source/Tools/MagicaVox/IO/Reader.h"
+    "Source/Tools/MagicaVox/IO/Reader.cpp"
+    "Source/Tools/MagicaVox/IO/typeDICT.h"
+    "Source/Tools/MagicaVox/IO/typeDICT.cpp"
+    "Source/Tools/MagicaVox/IO/typeROTATION.h"
+    "Source/Tools/MagicaVox/IO/typeROTATION.cpp"
+)
+source_group("Source/Tools/MagicaVox/IO" FILES ${MagickaVox_IO})
+
+source_group("Source/Tools/MagicaVox" FILES ${MagickaVox_Files})
 set(MagickaVox_Files
     "Source/Tools/MagicaVox/VoxFile.h"
     "Source/Tools/MagicaVox/VoxFile.cpp"
     "Source/Tools/MagicaVox/VoxFileRaw.h"
     "Source/Tools/MagicaVox/VoxFileRaw.cpp"
-    "Source/Tools/MagicaVox/Chunk.h"
-    "Source/Tools/MagicaVox/ChunkFactory.h"
-    "Source/Tools/MagicaVox/ChunkLAYR.h"
-    "Source/Tools/MagicaVox/ChunkLAYR.cpp"
-    "Source/Tools/MagicaVox/ChunkMAIN.h"
-    "Source/Tools/MagicaVox/ChunkMAIN.cpp"
-    "Source/Tools/MagicaVox/ChunkMATL.h"
-    "Source/Tools/MagicaVox/ChunkMATL.cpp"
-    "Source/Tools/MagicaVox/ChunknGRP.h"
-    "Source/Tools/MagicaVox/ChunknGRP.cpp"
-    "Source/Tools/MagicaVox/ChunknSHP.h"
-    "Source/Tools/MagicaVox/ChunknSHP.cpp"
-    "Source/Tools/MagicaVox/ChunknTRN.h"
-    "Source/Tools/MagicaVox/ChunknTRN.cpp"
-    "Source/Tools/MagicaVox/ChunkPACK.h"
-    "Source/Tools/MagicaVox/ChunkPACK.cpp"
-    "Source/Tools/MagicaVox/ChunkRGBA.h"
-    "Source/Tools/MagicaVox/ChunkRGBA.cpp"
-    "Source/Tools/MagicaVox/ChunkrOBJ.h"
-    "Source/Tools/MagicaVox/ChunkrOBJ.cpp"
-    "Source/Tools/MagicaVox/ChunkSIZE.h"
-    "Source/Tools/MagicaVox/ChunkSIZE.cpp"
-    "Source/Tools/MagicaVox/ChunkXYZI.h"
-    "Source/Tools/MagicaVox/ChunkXYZI.cpp"
-    "Source/Tools/MagicaVox/ChunkRCAM.h"
-    "Source/Tools/MagicaVox/ChunkRCAM.cpp"
-    "Source/Tools/MagicaVox/ChunkNOTE.h"
-    "Source/Tools/MagicaVox/ChunkNOTE.cpp"
-    "Source/Tools/MagicaVox/Reader.h"
-    "Source/Tools/MagicaVox/typeDICT.h"
-    "Source/Tools/MagicaVox/typeROTATION.h"
-	"Source/Tools/MagicaVox/Chunk.cpp"
-    "Source/Tools/MagicaVox/ChunkFactory.cpp"
-    "Source/Tools/MagicaVox/Reader.cpp"
-    "Source/Tools/MagicaVox/typeDICT.cpp"
-    "Source/Tools/MagicaVox/typeROTATION.cpp"
 )
 source_group("Source/Tools/MagicaVox" FILES ${MagickaVox_Files})
 
@@ -137,6 +146,8 @@ set(ALL_FILES
     ${Source_Files}
     ${Tools_Files}
 	${MagickaVox_Files}
+	${MagickaVox_Chunk_Files}
+	${MagickaVox_IO}
     ${Voxel_Files}
     ${GCode_Files}
 	${API_Files}
